--- a/views/layout.erb
+++ b/views/layout.erb
@@ -9,6 +9,9 @@
       margin: 10px auto;
       width: 800px;
     }
+    .login{
+      margin-top: 50px;
+    }
     </style>
   </head>
   <body>
