--- a/views/login.erb
+++ b/views/login.erb
@@ -1,5 +1,7 @@
-<form action="/login" method="post">
+<div class="login">
+  <form action="/login" method="post">
   <p>Email: <input type="text" name="user[email]" /></p>
   <p>Password: <input type="password" name="user[password]" /></p>
   <input type="submit" value="Log In" />
-</form>
+  </form>
+</div>
