Config warden and show errors messages

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -19,6 +19,18 @@
 
     <p><a href="/login">Log In</a> | <a href="/protected">Protected Page</a> | <a href="/logout">Log Out</a></p>
 
+    <% if flash[:success] %>
+      <div style="color:green;">
+        <%= flash[:success] %>
+      </div>
+    <% end %>
+
+    <% if flash[:error] %>
+      <div style="color:red;">
+        <%= flash[:error] %>
+      </div>
+    <% end %>
+
     <div class="container">
       <%= yield %>
     </div>
